--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "algoliasearch": "^5.46.2",
     "contentstack": "^3.26.3",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-instantsearch": "^7.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
