--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@contentstack/live-preview-utils": "^4.1.3",
     "@contentstack/personalize-edge-sdk": "^1.0.19",
+    "@contentstack/utils": "^1.6.3",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "algoliasearch": "^5.46.2",
