--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
 , "contentstack-sdk/index.js"  ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "supabase"]
 }
